--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <td>
                 <h1>Akhyarm</h1>
                 <p><em>Sarjana Sosial <strong><a href="https://kpi.umy.ac.id/">(S.Sos)</a></strong>.</em></p>
-                <p>Saya adalah calon Front End Developer dan Flutter Android Developer professional. Saat ini saya berkuliah di UMY semester 4 jurusan Komunikasi Penyiaran Islam.
+                <p>Saya adalah calon Front End Developer dan Flutter Android Developer professional. Saat ini saya berkuliah di UMY semester 4 jurusan KPI.
                     <a href="#content">Skip to #maincontent</a> 
                 </p>
             </td>
         </tr>
     </table>
     <hr> <!-- size="3" noshade="" -->
-    <h3>Skills:</h3>
+    <h3>Yang akan Saya Pelajari:</h3>
     <table cellspacing="10">
         <tr>
             <td>HTML(5)</td>
