--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <td>
                 <h1>Akhyarm</h1>
                 <p><em>Sarjana Sosial <strong><a href="https://kpi.umy.ac.id/">(S.Sos)</a></strong>.</em></p>
-                <p>Saya adalah calon Front End Developer dan Flutter Android Developer professional. Saat ini saya berkuliah di UMY semester 4 jurusan KPI.
+                <p>Saya adalah calon Front End Developer dan Flutter Android Developer professional. Saat ini saya berkuliah di UMY semester 4.
                     <a href="#content">Skip to #maincontent</a> 
                 </p>
             </td>
