--- a/index.html
+++ b/index.html
@@ -1,108 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔥 Yarm Website</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Just HTML</title>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
 
-<body>
+  <body>
+    <!-- <body style="background-color: #EAF6F6;"> (inline CSS) -->
     <table cellspacing="16">
-        <tr>
-            <td><img src="/images/circle-cropped.png" alt="Akhyar Profile"></td>
-            <td>
-                <h1>Akhyarm</h1>
-                <p><em>Sarjana Sosial <strong><a href="https://kpi.umy.ac.id/">(S.Sos)</a></strong>.</em></p>
-                <p>Saya adalah calon Front End Developer dan Flutter Android Developer professional. Saat ini saya berkuliah di UMY semester 4.
-                    <a href="#content">Skip to #maincontent</a> 
-                </p>
-            </td>
-        </tr>
+      <tr>
+        <td><img src="circle-cropped.png" alt="Akhyar Profile" /></td>
+        <td>
+          <h1>Akhyarm</h1>
+          <p>
+            <em
+              >Lorem, ipsum dolor.
+              <strong><a href="https://kpi.umy.ac.id/">(S.Sos)</a></strong
+              >.</em
+            >
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+            aliquam ut velit? Quibusdam voluptatum alias facere nulla, debitis
+            distinctio fuga.
+            <a href="#content">Skip to #maincontent</a>
+          </p>
+        </td>
+      </tr>
     </table>
-    <hr> <!-- size="3" noshade="" -->
-    <h3>Yang akan Saya Pelajari:</h3>
+    <hr />
+    <!-- size="3" noshade="" (groove - css) -->
+    <h3>Lorem, ipsum.</h3>
     <table cellspacing="10">
-        <tr>
-            <td>HTML(5)</td>
-            <td>⭐⭐⭐⭐⭐</td>
-            <td>Json</td>
-            <td>⭐⭐⭐⭐⭐</td>
-            <td>MySQL</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>CSS(3)</td>
-            <td>⭐⭐⭐⭐⭐</td>
-            <td>Bootstrap</td>
-            <td>⭐⭐⭐⭐⭐</td>
-            <td>JQuery</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Javascript</td>
-            <td>⭐⭐⭐⭐⭐</td>
-            <td>PHP</td>
-            <td>⭐⭐⭐⭐⭐</td>
-            <td>Flutter</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
+      <tr>
+        <td>Lorem.</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>ipsum</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>dolor</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>sit</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>Amet</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>consectetur</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>adipisicing</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>elit</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>javascript</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
     </table>
-    <hr>
+    <hr />
     <table>
-        <tr>
-            <td>
-                <h4>Hobi, dll:</h4>
-            </td>
-            <td>
-                <ol start="2">
-                    <li>Swiming</li>
-                    <li>Coding
-                        <ol type="A">
-                            <li>
-                                <a target="_blank" href="https://flutter.dev/">
-                                    <img src="/images/flutter.png" alt="(open in new tab)">
-                                </a>
-                            </li>
-                        </ol>
-                    </li>
-                </ol>
-            </td>
-            <td>
-                <ul>
-                    <li>1
-                        <ul>
-                            <li>2x
-                                <ul>
-                                    <li>3x</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </td>
-        </tr>
+      <tr>
+        <td>
+          <h4>Lorem:</h4>
+        </td>
+        <td>
+          <ol start="2">
+            <li>Lorem.</li>
+            <li>
+              Ipsum.
+              <ol type="A">
+                <li>
+                  <a target="_blank" href="https://flutter.dev/">
+                    <img src="flutter.png" alt="(open in new tab)" />
+                  </a>
+                </li>
+              </ol>
+            </li>
+          </ol>
+        </td>
+        <td>
+          <ul>
+            <li>
+              1
+              <ul>
+                <li>
+                  2x
+                  <ul>
+                    <li>3x</li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </td>
+      </tr>
     </table>
-    <hr>
+    <hr />
+    <br />
     <a href="contact-me.html">Contact Me</a>
     <a href="mailto:akhyarm@naver.com">Send email to nowhere</a>
-    <hr>
+    <br />
+    <hr />
     <table cellspacing="16">
-        <tr>
-            <td>
-                <main id="content">#maincontent</main>
-                <!-- <h2 id="Section_further_down">Section further down</h2> -->
-            </td>
-            <td>
-                <a href="#top">TOP</a>
-            </td>
-            <td>
-                <p>
-                    Learn more <a href="/products">about our products</a>. <!-- STRONG LINK TEXT (ACCESSIBILITY)-->
-                </p>
-            </td>
-        </tr>
-    </table> 
-    <hr>
-</body>
+      <tr>
+        <td>
+          <main id="content">#maincontent</main>
+          <!-- <h2 id="Section_further_down">Section further down</h2> -->
+        </td>
+        <td>
+          <a href="#top">TOP</a>
+        </td>
+        <td>
+          <p>
+            Learn more <a href="/products">about our products</a>.
+            <!-- STRONG LINK TEXT (ACCESSIBILITY)-->
+          </p>
+        </td>
+      </tr>
+    </table>
+    <hr />
+  </body>
 </html>
