--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <body style="background-color: #EAF6F6;"> (inline CSS) -->
     <table cellspacing="16">
       <tr>
-        <td><img src="circle-cropped.png" alt="Akhyar Profile" /></td>
+        <td><img src="images/circle-cropped.png" alt="Akhyar Profile" /></td>
         <td>
           <h1>Akhyarm</h1>
           <p>
@@ -74,7 +74,7 @@
               <ol type="A">
                 <li>
                   <a target="_blank" href="https://flutter.dev/">
-                    <img src="flutter.png" alt="(open in new tab)" />
+                    <img src="images/flutter.png" alt="(open in new tab)" />
                   </a>
                 </li>
               </ol>
